--- a/onr_app/lib/core/l10n/app_es.arb
+++ b/onr_app/lib/core/l10n/app_es.arb
@@ -1,5 +1,6 @@
 {
   "something_went_wrong_title": "Algo salió mal",
+  "try_again": "trata de nuevo",
   "try_again_later_description": "Inténtalo más tarde.",
   "understood_button_text": "Entendido",
   
@@ -9,6 +10,19 @@
   "password_input_label": "Contraseña",
   "invalid_email_error_text": "Email no valido",
   "password_too_short_error_text": "La contraseña es muy corta",
-  "empty_field_error_text": "Campo vacio"
+  "empty_field_error_text": "Campo vacio",
+
+  "products_tile": "Productos",
+  "title_label": "Título",
+  "category_label": "Categoría",
+  "price_label": "Precio",
+  "rating_label": "Rating",
+  "cant_load_products_title": "No pudimos cargar tus productos",
+  "cant_load_product_title": "No pudimos obtener información del producto",
+
+  "users_title": "Usuarios",
+  "users_count_text": "El número total de usuarios es",
+  "ok_label": "Ok",
+  "cant_load_users_title": "No pudimos cargar los usuarios"
 }
 
